examples/tests/semantic/fail/undeclaredVariable.tig
let 
    var saucisse : int := 1
in 
    undeclared_variable := "taylor"
end 